2003-06-26 Damien McGinnes
        
	* Mercator/Segment.cpp, Segment.h: Added the location of the
	  segment. Changed applyMod to work with mods in absolute coords
	* Mercator/Terrain.cpp, Terrain.h: added addMod to apply mods to 
	  the terrain - this allows a mod to span several segments
	* Mercator/TerrainMod.h: added a clone method, fixed the virtual
	  keyword on a few methods, disabled copy constructors

2003-06-23  Al Riddoch  <alriddoch@zepler.org>

	* Fix Makefile.ams so that distcheck works.

	* tests/main.cpp: Fix tests to work with recent API changes.

2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Mercator.h, Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Terrain.cpp, Mercator/Terrain.h: Clean up the
	  way the default segment resolution and size is handled.

	* Mercator/Surface.cpp, Mercator/Surface.h: Framework for
	  class representation texture layers on the terrain.

2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Updated copyright statements to include Damien a bit more.

2003-06-22  Damien McGinnes

	* Mercator/Segment.cpp: fixed an error in the clip code (x and y 
	  were switched)
        
2003-06-22  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h: Make invalidate() private.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Fix bugs in revised
	  setBasePoint. Remove obsolete methods, and simply to one
	  getSegment call, as two are no longer required. Add destructor.

2003-06-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp, Mercator/Segment.h: Store control
	  points in the segment object, so it can be re-populated.

	* Mercator/Terrain.cpp, Mercator/Terrain.h: Manage the creation of
	  new Segment objects when inserting new base points, and handle
	  invalidation at this point too. getSegmentSafe is now deprecated.
	  Untested.

	* tests/main.cpp: Update tests for API change, and clean up output.

2003-06-21  Damien McGinnes

	* Mercator/Terrain.cpp: 